--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "ml-project-demo"
+name = "ml_project_demo"
 version = "0.1.0"
 description = "Demo ml project"
 authors = ["Golgovskiy"]
@@ -16,3 +16,6 @@ click = "^8.1.3"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+ml_project_demo = "ml_project_demo.console:main"
