--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ keywords = ["demo"]
 [tool.poetry.dependencies]
 python = "^3.8"
 click = "^8.1.3"
+pandas = "^1.4.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
