--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ keywords = ["demo"]
 python = "^3.8"
 click = "^8.1.3"
 pandas = "^1.4.2"
+pandas-profiling = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
