--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "ml_project_demo"
-version = "0.1.0"
+name = "mpd"
+version = "0.0.1"
 description = "Demo ml project"
 authors = ["Golgovskiy"]
 readme = "README.md"
@@ -21,4 +21,5 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-ml_project_demo = "ml_project_demo.console:main"
+report = "mpd.report:makeReport"
+train = "mpd.train:train"
