--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.8"
 click = "^8.1.3"
 pandas = "^1.4.2"
 pandas-profiling = "^3.2.0"
+mypi = "^0.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
