--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ click = "^8.1.3"
 pandas = "^1.4.2"
 pandas-profiling = "^3.2.0"
 mypi = "^0.0.3"
+black = "^22.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
