--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,13 @@ python = "^3.8"
 click = "^8.1.3"
 pandas = "^1.4.2"
 pandas-profiling = "^3.2.0"
+mlflow = "^1.25.1"
+GitPython = "3.1.24"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
-mypi = "^0.0.3"
 black = "^22.3.0"
+mypy = "^0.950"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
