--- a/mypi.ini
+++ b/mypi.ini
@@ -1,6 +1,4 @@
 [mypy]
-strict=True
-disallow_untyped_decorators = False
 
-[mypy-pandas,sklearn.*,joblib,mlflow.*]
+[mypy-nox.*,pytest,mypy-pandas,sklearn.*,joblib,mlflow.*]
 ignore_missing_imports = True
