--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pandas = "^1.4.2"
 pandas-profiling = "^3.2.0"
 mlflow = "^1.25.1"
 GitPython = "3.1.24"
+pathlib = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
