--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pandas-profiling = "^3.2.0"
 mlflow = "^1.25.1"
 GitPython = "3.1.24"
 pathlib = "^1.0.1"
+sklearn = "^0.0"
+numpy = "^1.22.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
