+auto hyperparameter crossvalidation (test)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
 report = "mpd.report:makeReport"
 train = "mpd.train:train"
+train_auto = "mpd.train_auto:train"
