--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ numpy = "^1.22.3"
 pytest = "^7.1.2"
 black = "^22.3.0"
 mypy = "^0.950"
+pytest-mock = "^3.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
