--- a/mypi.ini
+++ b/mypi.ini
@@ -1,4 +1,6 @@
 [mypy]
+strict=True
+disallow_untyped_decorators = False
 
-[mypy-nox.*,pytest,mypy-pandas,sklearn.*,joblib,mlflow.*]
+[mypy-pandas,sklearn.*,joblib,mlflow.*]
 ignore_missing_imports = True
