--- a/.github/workflows/nox.yml
+++ b/.github/workflows/nox.yml
@@ -1,21 +1,17 @@
-on:
-  push:
-    branches: 
-      - master
-#   pull_request:
-#     branches: 
-#       - main
+on: [push]
 
 jobs:
-  test:
-
+  build:
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 3
       matrix:
-        python-version: [3.8,3.9,3.10]
-
+        python-version: ["3.8", "3.9", "3.10"]
     steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -23,3 +19,4 @@ jobs:
     - name: Run nox
       run: |
         poetry run nox
+
