--- a/.github/workflows/nox.yml
+++ b/.github/workflows/nox.yml
@@ -16,6 +16,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
+        poetry install
     - name: Run nox
       run: |
         poetry run nox
