--- a/.github/workflows/nox.yml
+++ b/.github/workflows/nox.yml
@@ -1,7 +1,5 @@
 on:
-  push:
-    branches:
-    - main
+  [push]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,10 +14,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install poetry
         poetry install
     - name: Run nox
       run: |
-        nox -rs
+        poetry run nox -rs
 
